# grupo-2-semantic-log-explorer

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  presentation.html  prompts.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: backend-tests.yml
.hypothesis/constants/: adc83b19e793491b  b858cb282617fb09  f96873350d3338f2
.kiro/hooks/: ruff-lint-format.kiro.hook
.kiro/specs/backend-test-configuration/: design.md  requirements.md  tasks.md
.kiro/specs/docker-integration/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/semantic-log-explorer/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: git.md  project.md
backend/: .env.example  pyproject.toml
backend/docs/: arquitetura.md  diagrama.md  prd.md  relatorio_avaliacao.md  relatorio_avaliacao_equipe5.md  rubric_equipe-5.md  rubrica_qualidade.md
backend/src/: main.py
backend/src/api/: dependencies.py
backend/src/api/routes/: chat.py  logs.py  upload.py
backend/src/core/: config.py  security.py
backend/src/models/: schemas.py
backend/src/services/: ingestion.py  llm.py  retriever.py  vectorstore.py
backend/tests/: conftest.py
backend/tests/property/: conftest.py  test_chunking_prop.py  test_docker_secrets_prop.py  test_file_validation_prop.py  test_nginx_proxy_prop.py  test_pii_sanitization_prop.py  test_prompt_assembly_prop.py  test_retriever_prop.py  test_session_cleanup_prop.py  test_spa_fallback_prop.py  test_sse_format_prop.py  test_upload_response_prop.py  test_vectorization_prop.py
backend/tests/unit/: conftest.py  test_config.py  test_docker_backend.py  test_docker_compose.py  test_docker_frontend.py  test_ingestion.py  test_llm.py  test_nginx_conf.py  test_prompt_injection.py  test_retriever.py  test_routes.py  test_security.py  test_vectorstore.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/: styles.css
frontend/src/components/: ChatWindow.vue  FileUpload.vue  LogSelector.vue  MessageBubble.vue
frontend/src/components/__tests__/: FileUpload.test.js  MessageBubble.test.js
frontend/src/composables/: useChat.js
frontend/src/composables/__tests__/: useChat.test.js
frontend/tests/unit/: ChatWindow.test.js  FileUpload.test.js  MessageBubble.test.js  useChat.test.js
